Fix for image wrapping problems in table cells. b=97619 r=bernd sr=waterson